<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ma.lab.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:orderInCategory="99"
        android:title="@string/favourite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

</menu>